<resources>
    <string name="app_name">FundatecHeroes</string>
    <string name="app_botao_login">Login</string>
    <string name="app_botao_voltar">Voltar</string>
    <string name="app_botao_onboarding">Criar Conta</string>
    <string name="app_criar_personagem">Criar Personagem</string>
    <string name="app_adicionar_novo_personagem">Adicionar Personagem</string>

    <string name="app_mensagem_sucessoCriacao">Conta criada com sucesso!</string>
    <string name="app_mensagem_erroGeralCriacao">Erro ao cadastrar, campos vazios</string>
    <string name="app_mensagem_erroNomeOnboarding">Erro ao cadastrar, insira um nome válido</string>
    <string name="app_mensagem_erroEmailOnboarding">Erro ao cadastrar, insira um email válido</string>
    <string name="app_mensagem_erroPasswordOnboarding">Erro ao cadastrar, insira uma senha válida</string>
    <string name="app_mensagem_erroEmailLogin">Erro ao logar, insira um email válida</string>
    <string name="app_mensagem_erroPasswordLogin">Erro ao logar, insira uma senha válida</string>
    <string name="app_mensagem_sucessoLogin">Login realizado com sucesso!</string>
    <string name="app_mensagem_erroLogin">Erro ao logar, insira dados válidos</string>
    <string name="app_mensagem_erroLoginInvalido">Erro ao logar, tente novamente mais tarde</string>

    <string name="app_campo_email">E-mail:</string>
    <string name="app_campo_senha">Senha:</string>
    <string name="app_campo_nomeUsuario">Nome do usuario:</string>
    <string name="app_campo_idade">Idade:</string>
    <string name="app_campo_dataNascimento">Nascimento:</string>
    <string name="app_campo_descricao">Descrição:</string>
    <string name="app_campo_nomePersonagem">Nome do Personagem:</string>
    <string name="app_campo_urlImagem">Coloque a url da imagem:</string>
    <string name="app_texto_novoUsuario">Novo por aqui?</string>


    <string name="app_mensagem_nome_personagem">Erro, insira um nome válido</string>
    <string name="app_mensagem_descricao_personagem">Erro, insira uma descrição</string>
    <string name="app_mensagem_url_personagem">Erro, insira uma url válida</string>
    <string name="app_mensagem_universo_personagem">Erro, selecione um universo válido</string>
    <string name="app_mensagem_tipo_personagem">Erro, selecione um tipo de personagem</string>
    <string name="app_mensagem_idade_personagem">Erro, insira a idade do personagem</string>
    <string name="app_mensagem_data_personagem">Erro, selecione uma data</string>
    <string name="app_mensagem_erroGenerico_personagem">Erro ao criar, tente novamente</string>
    <string name="app_mensagem_sucessoCriar_personagem">Personagem criado com sucesso!</string>
    <string name="app_mensagem_sucessoRemover_personagem">Personagem Removido com Sucesso!</string>

    <string name="character_detail_description">Descrição: %1$s</string>
    <string name="character_detail_age">Idade: %1$s</string>
    <string name="character_detail_birthday">Nascimento: %1$s</string>

    <string-array name="tipo_personagem">
        <item>Herói</item>
        <item>Vilão</item>
    </string-array>

    <string-array name="universo_personagem">
        <item>DC</item>
        <item>Marvel</item>
    </string-array>

</resources>