<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_campo_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/herois2"
        />

    <EditText
        android:id="@+id/editText_campo_nome"
        android:hint="@string/app_campo_nomePersonagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editText_campo_descricao"
        android:hint="@string/app_campo_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_campo_nome"
        app:layout_constraintStart_toStartOf="@id/editText_campo_nome"
        app:layout_constraintEnd_toEndOf="@id/editText_campo_nome"
        />

    <EditText
        android:id="@+id/editText_campo_idade"
        android:hint="@string/app_campo_idade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/editText_campo_descricao"
        app:layout_constraintStart_toStartOf="@id/editText_campo_descricao"
        app:layout_constraintEnd_toStartOf="@id/pickTime"
        />

    <Button
        android:id="@+id/pickTime"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="Data"
        android:layout_marginTop="10dp"
        android:textColor="@color/fundoHeroBlack"
        app:layout_constraintEnd_toEndOf="@id/editText_campo_descricao"
        app:layout_constraintTop_toBottomOf="@id/editText_campo_descricao"
        app:layout_constraintStart_toEndOf="@id/editText_campo_idade"
        />


    <Spinner
        android:id="@+id/spinner_tipo_personagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/editText_campo_idade"
        app:layout_constraintTop_toBottomOf="@id/editText_campo_idade"
        app:layout_constraintEnd_toEndOf="@id/editText_campo_idade"
        />

    <Spinner
        android:id="@+id/spinner_universo_personagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pickTime"
        app:layout_constraintTop_toBottomOf="@id/pickTime"
        app:layout_constraintStart_toStartOf="@+id/pickTime"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_criar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/check"
        android:contentDescription="@string/app_criar_personagem"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/fundoHeroVermelho"
        />

</androidx.constraintlayout.widget.ConstraintLayout>