<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_login_email"
        android:src="@drawable/miles" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorHint="@color/fundoHeroBranco"
        app:boxBackgroundColor="@color/fundoHeroBlack2"
        >
    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:hint="@string/app_campo_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/fundoHeroBranco"
        android:textSize="20sp"
       />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/input_login_email"
        app:layout_constraintTop_toBottomOf="@+id/input_login_email"
        android:textColorHint="@color/fundoHeroBranco"
        app:boxBackgroundColor="@color/fundoHeroBlack2"
        >
    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/app_campo_senha"
        android:textColor="@color/fundoHeroBranco"
      />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/usuario_novo"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/app_texto_novoUsuario"
        android:textColor="@color/fundoHeroBranco"
        app:layout_constraintStart_toStartOf="@+id/input_login_senha"
        app:layout_constraintEnd_toEndOf="@id/input_login_senha"
        app:layout_constraintTop_toBottomOf="@+id/input_login_senha" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_height="wrap_content"
        android:text="@string/app_botao_login"
        android:backgroundTint="@color/fundoHeroVermelho"
        android:layout_marginTop="90dp"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/input_login_senha"
        app:layout_constraintEnd_toEndOf="@id/input_login_senha"
        app:layout_constraintTop_toBottomOf="@+id/input_login_senha" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>