<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/degrade">


    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_onboardingNome"
        android:src="@drawable/mileshero"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_onboardingNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorHint="@color/fundoHeroBranco"
        app:boxBackgroundColor="@color/fundoHeroBlack2"
        >
        <EditText
            android:id="@+id/onboardingNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:hint="@string/app_campo_nomeUsuario"
            android:inputType="text"
            android:textColor="@color/fundoHeroBranco"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_onboardingEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/input_onboardingNome"
        app:layout_constraintStart_toStartOf="@+id/input_onboardingNome"
        app:layout_constraintTop_toBottomOf="@+id/input_onboardingNome"
        android:textColorHint="@color/fundoHeroBranco"
        app:boxBackgroundColor="@color/fundoHeroBlack2"
        >
        <EditText
            android:id="@+id/onboardingEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:hint="@string/app_campo_email"
            android:textColor="@color/fundoHeroBranco"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_onboardingSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/input_onboardingEmail"
        app:layout_constraintStart_toStartOf="@+id/input_onboardingEmail"
        app:layout_constraintTop_toBottomOf="@+id/input_onboardingEmail"
        android:textColorHint="@color/fundoHeroBranco"
        app:boxBackgroundColor="@color/fundoHeroBlack2"
        >
        <EditText
            android:id="@+id/onboardingSenha"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/app_campo_senha"
            android:textColor="@color/fundoHeroBranco"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_height="wrap_content"
        android:text="@string/app_botao_onboarding"
        android:backgroundTint="@color/fundoHeroVermelho"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/input_onboardingSenha"
        app:layout_constraintEnd_toEndOf="@id/input_onboardingSenha"
        app:layout_constraintTop_toBottomOf="@+id/input_onboardingSenha"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

